--- a/src/global.css
+++ b/src/global.css
@@ -49,7 +49,7 @@ input:not([type='checkbox']):not([type='radio']):focus,
 select:focus,
 textarea:focus {
   border-color: #3b82f6;
-  box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.4);
+  box-shadow: 0 0 6px 2px rgba(59, 130, 246, 0.4);
 }
 
 .form-element:disabled,
